--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kassaab.github.io/index.html",
+  "homepage": "https://kassaab.github.io/kassaab.github.io",
   "name": "vs-portfolio",
   "private": true,
   "version": "0.0.0",
